2002-01-13	fabian
    * bold is now enabled when font with appropriate bold
      size is used.
      
2003-01-13	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Added an option to copy selected text to emulate 
      X copy/paste. This requires a multi-button mouse 
      with one of the buttons programmed to be "Cmd-V" or 
      "paste".
      

2003-01-10	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Added some keyboard shortcuts to addressbook.
    

2003-01-11	Aaron D. Gerber <gerber@trvnet.net>

    * When you edit or add an entry to the address book,
      it will be sorted.
      
2003-01-10	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Fixed bugs in syncing transparency value and control 
      in the Preference panel.


2003-01-10	fabian
    * Better resize behavior
    * Tab title changes when an icon title change
      request is received
    
2003-01-09	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Fixed some scrolling/sizing issues by overriding 
      adjustScroll: in PTYTextView. Reactivated the 
      windowWillResize: toSize: code.
      

2003-01-09 	fabian
    * help docs updated. Removed unnecessary links and pics
    * Fixed a bug in scrollDown
    * Fixed a bug in putToken(), NEL
    
2003-01-08	fabian
    * Added new option in address book entries that allow
      user to set "close session automatically" individually
      
2003-01-08	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Save menu item in contextual menu is always validated. 
      Saves selection if there is one, save everything if not.
      
    * Added "Close" menu item to contextual menu to close 
      current session.
      
    * When copying text, trimming white spaces and new lines.
      
    
2003-01-07	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Adjusted some visual sizing glitches when going from 
      no tabs to tabs and vice versa.
      
    * windowWillResize: toSize does the default OS thing.
    

2003-01-07	fabian
    * fixed a bug in eraseInLine()